fix: add vertical scrollbar to pledges widges for overflowing pledge items

--- a/ui/src/components/review/pledges-widget/pledges-widget.scss
+++ b/ui/src/components/review/pledges-widget/pledges-widget.scss
@@ -1,12 +1,37 @@
 .pledges-widget{
-    height: 435px;
-    width: 440px;
+    ::-webkit-scrollbar {
+        width: 4px;
+       
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #D7D8FA;
+        border-radius: 100px;  
+        
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #7A7B9A;
+        border-radius: 100px; 
+      }
+      
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555; 
+      }
+
+    height: 460px;
+    width: 450px;
     border: 1px solid #E6E7E8;
     display: relative;
     border-radius: 4px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 2px 6px 2px rgba(0, 0, 0, 0.15);
     background: #ffffff;
     transition: .5s;
+
+
 
     &__wrapper{
         padding: 20px;
@@ -42,6 +67,12 @@
         line-height: 14px;
         letter-spacing: 0.02em;
         color: #818385;
+    }
+    &__pledge-item-wrapper{
+        height: 360px;
+        overflow-y: scroll;
+        padding-right: 10px;
+        margin-top: 20px;
     }
     &__pledges-data{
         padding-top: 24px;
